<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:orientation="vertical"
    android:padding = "10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pranjal140003gmail.gupta.p.takecare.PatientDetail">

    <android.support.v7.widget.CardView
        style="@style/cardViewTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

   <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >
       <TextView
           android:id="@+id/info_tag"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/info_tag"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           android:layout_marginLeft="@dimen/info_tag_margin"
           android:layout_marginStart="@dimen/info_tag_margin"
           android:background="@color/colorPrimaryDark"
           android:textColor="@android:color/white"
           android:padding="5dp"/>
       <LinearLayout
           android:padding="5dp"
           android:layout_width="368dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/info_tag"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           android:layout_marginTop="16dp"
           android:layout_marginRight="8dp"
           app:layout_constraintRight_toRightOf="parent"
           android:layout_marginEnd="8dp">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               tools:layout_editor_absoluteY="86dp"
               tools:layout_editor_absoluteX="8dp">
           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/patientName"
               style="@style/infoTheme"
               />
               <TextView
                   android:id="@+id/patient_name"
                   android:layout_width="0dp"
                   android:layout_weight="3"
                   android:layout_height="wrap_content"
                   tools:text="Pranjal Gupta"
                   style="@style/infoTheme"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               tools:layout_editor_absoluteY="86dp"
               tools:layout_editor_absoluteX="8dp">
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:text="@string/age_tag"
                   style="@style/infoTheme"
                   />
               <TextView
                   android:id="@+id/patient_age"
                   android:layout_width="0dp"
                   android:layout_weight="3"
                   android:layout_height="wrap_content"
                   tools:text="18"
                   style="@style/infoTheme"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               tools:layout_editor_absoluteY="86dp"
               tools:layout_editor_absoluteX="8dp">
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:text="@string/sex_tag"
                   style="@style/infoTheme"
                   />
               <TextView
                   android:id="@+id/patient_sex"
                   android:layout_width="0dp"
                   android:layout_weight="3"
                   android:layout_height="wrap_content"
                   tools:text="Male"
                   style="@style/infoTheme"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               tools:layout_editor_absoluteY="86dp"
               tools:layout_editor_absoluteX="8dp">
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:text="@string/contact_number"
                   style="@style/infoTheme"
                   />
               <TextView
                   android:id="@+id/patient_phone"
                   android:layout_width="0dp"
                   android:layout_weight="3"
                   android:layout_height="wrap_content"
                   tools:text="9709372706"
                   style="@style/infoTheme"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               tools:layout_editor_absoluteY="86dp"
               tools:layout_editor_absoluteX="8dp">
               <TextView
                   android:id="@+id/patient_email"
                   android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:text="@string/email_id"
                   style="@style/infoTheme"
                   />
               <TextView
                   android:layout_width="0dp"
                   android:layout_weight="3"
                   android:layout_height="wrap_content"
                   tools:text="p.gupta.pranjal40003@gmail.com"
                   style="@style/infoTheme"
                   />
           </LinearLayout>




       </LinearLayout>
   </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/cardViewTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
   <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:minHeight="100dp">
       <TextView
           android:background="@color/colorPrimaryDark"
           android:textColor="@android:color/white"
           android:id="@+id/problem_desc_tag"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/problem_description_tag"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:layout_marginLeft="@dimen/info_tag_margin"
           android:layout_marginStart="@dimen/info_tag_margin"
           android:padding="5dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:padding="10dp"
           app:layout_constraintTop_toBottomOf="@+id/problem_desc_tag"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintEnd_toEndOf="parent"

           android:layout_marginTop="8dp"
           android:text="gchgcngvhchgghvhgvh
jhjvjhvjhvjhvjhvjhvjhvjvjkhknlknlnlnlklnlnlnlknlnbjbbmbbkjbkjbjhbjbmnmmnmnmn mbmbnmbmnbmnbmnbmbmnbmnbmnbmnbkjbkjbkjbkjbkjbm;lkmklmlkml
l;;klk;kl;"
           app:layout_constraintBottom_toBottomOf="parent"
           android:layout_marginBottom="8dp" />
   </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/cardViewTheme"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/infected_part_photo"
                android:layout_marginLeft="@dimen/info_tag_margin"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="@android:color/white"/>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="200dp"
            android:paddingTop="10dp"
            android:padding="5dp">

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_guideline"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                tools:layout_editor_absoluteY="421dp"
                tools:layout_editor_absoluteX="192dp" />
            <android.support.constraint.Guideline
                android:id="@+id/vertical_guideline"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_percent="0.5"
                tools:layout_editor_absoluteY="431dp"
                tools:layout_editor_absoluteX="10dp" />
            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/horizontal_guideline"
                app:layout_constraintBottom_toTopOf="@+id/vertical_guideline"
                android:id="@+id/image_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                 />
            <ImageView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/vertical_guideline"
                android:id="@+id/image_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/horizontal_guideline" />
            <ImageView
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/horizontal_guideline"
                android:id="@+id/image_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@+id/vertical_guideline" />
            <ImageView
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/image_4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintLeft_toLeftOf="@+id/horizontal_guideline"
                app:layout_constraintTop_toTopOf="@+id/vertical_guideline" />


        </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</ScrollView>